src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Event_Time__c</fullName>
        <label>Event Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reminder_Minutes__c</fullName>
        <label>Reminder Minutes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Snoozed_Time__c</fullName>
        <label>Snoozed Time</label>
        <type>DateTime</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Time__c</columns>
        <columns>Is_Inactive__c</columns>
        <columns>Reminder_Minutes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Only_Lead_or_Opportunity_filled_out</fullName>
        <active>true</active>
        <errorConditionFormula>IF( OR(AND( NOT(ISBLANK(Opportunity__c )), NOT(ISBLANK(Lead__c))), AND( ISBLANK(Opportunity__c ), ISBLANK(Lead__c))) , true, false)</errorConditionFormula>
        <errorMessage>Either lead or opportunity must be filled out</errorMessage>
    </validationRules>
</CustomObject>